@@ -1,5 +1,8 @@
 Changes for Perl extension Text-FindIndent
 
+	- Handle case where hash keys and values are indented by braces pos + 1
+	(CHORNY)
+
 0.07
 	- ~40% faster since 0.05
 
